Did quite a lot :>

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,8 +2,14 @@
 <html>
 	<head>
 		<title>mebious - welcome to the wired</title>
+		<link rel="stylesheet" type="text/css" href="/css/mebious.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
 	</head>
 	<body>
+		<form action="/posts" method="POST" id="text">
+			<input type="text" name="text" size="32" maxlength="512">
+			<button>in_txt</button>
+		</form>
 	</body>
 </html>
