--- a/public/css/mebious.css
+++ b/public/css/mebious.css
@@ -1,1 +1,39 @@
 /* Based on the original mebious.co.uk style. */
+
+* {
+		margin: 0px;
+		padding: 0px;
+}
+
+body {
+		background: #000000;
+}
+
+body, input {
+		color: #00FF00;
+		background: #000000;
+		font-family: Verdana, Arial, Helvetica, sans-serif;
+		font-size: 0.9em;
+}
+
+#text {
+		border: 1px solid #003300;
+		display: inline;
+		float: left;
+		padding: 2px;
+		margin: 2px;
+}
+
+#text input {
+		border: 1px solid #006600;
+		padding: 1px;
+}
+
+#text button {
+		border: 1px solid #00cc00;
+		color: #00ff00;
+		background: #000000;
+		font-size: 0.8em;
+		padding: 2px;
+		vertical-align: 1px;
+}
