Tried to make the core interface mobile friendly.

--- a/public/css/mebious.css
+++ b/public/css/mebious.css
@@ -37,3 +37,12 @@ body, input {
 		padding: 2px;
 		vertical-align: 1px;
 }
+
+#posts {
+    clear: both;
+}
+
+.post {
+    width: 40%;
+    word-wrap: break-word;
+}
