--- a/views/index.erb
+++ b/views/index.erb
@@ -11,5 +11,11 @@
 			<input type="text" name="text" size="32" maxlength="512">
 			<button>in_txt</button>
 		</form>
+                
+                <div id="posts">
+                  <% for post in @posts %>
+                    <p class="post" style="<%= Mebious::stylize post %>"><%= Model::sanitize(post['text']) %></p>
+                  <% end %>
+                </div>
 	</body>
 </html>
