--- a/views/index.erb
+++ b/views/index.erb
@@ -13,6 +13,7 @@
     </form>
                 
     <div id="posts">
+			<% @posts = @posts.to_a.reverse %>
       <% for post in @posts %>
       <p class="post" style="<%= Mebious::stylize post %>"><%= Model::sanitize(Mebious::corrupt(post['text'])) %></p>
       <% end %>
