--- a/views/index.erb
+++ b/views/index.erb
@@ -11,6 +11,10 @@
       <input type="text" name="text" size="32" maxlength="512">
       <button>in_txt</button>
     </form>
+
+		<div id="rss">
+			<a href="/rss">rss</a>
+		</div>
                 
     <div id="posts">
 			<% @posts = @posts.to_a.reverse %>
