--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>mebious - welcome to the wired</title>
+    <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/mebious.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
