--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
     <div id="outline">
       <form action="/posts" method="POST" id="text">
         <%= csrf_tag %>
-        <textarea name="text" rows="1" cols="32" maxlength="512"></textarea>
+        <input name="text" size="32" maxlength="512">
         <button>in_txt</button>
       </form>
 
